--- a/Inventory/Views/Companies/Details.cshtml
+++ b/Inventory/Views/Companies/Details.cshtml
@@ -28,6 +28,18 @@
             <dd>
                 @Html.DisplayFor(model => model.Active)
             </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Registration)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Registration)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.LastUpdate)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.LastUpdate)
+            </dd>
         </dl>
     </div>
     <div>
