--- a/Inventory/Views/Employees/Delete.cshtml
+++ b/Inventory/Views/Employees/Delete.cshtml
@@ -70,6 +70,6 @@
         <form asp-action="Delete">
             <a asp-action="Index" class="btn btn-default">Voltar</a> |
             <input type="hidden" asp-for="EmployeeId" />
-            <input type="submit" value="Delete" class="btn btn-danger" />
+            <input type="submit" value="Remover" class="btn btn-danger" />
         </form>
     </div>
