--- a/Inventory/Views/Employees/Edit.cshtml
+++ b/Inventory/Views/Employees/Edit.cshtml
@@ -56,12 +56,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Employee.Registration" class="control-label"></label>
-                <input asp-for="Employee.Registration" class="form-control" />
+                <input asp-for="Employee.Registration" class="form-control" readonly />
                 <span asp-validation-for="Employee.Registration" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Employee.LastUpdate" class="control-label"></label>
-                <input asp-for="Employee.LastUpdate" class="form-control" />
+                <input asp-for="Employee.LastUpdate" class="form-control" readonly />
                 <span asp-validation-for="Employee.LastUpdate" class="text-danger"></span>
             </div>
             <hr />
