--- a/Inventory/Views/Equipments/Edit.cshtml
+++ b/Inventory/Views/Equipments/Edit.cshtml
@@ -88,19 +88,14 @@
                 <span asp-validation-for="Equipment.SerialNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Equipment.Maintenance" class="control-label"></label>
-                <input asp-for="Equipment.Maintenance" class="form-control" />
-                <span asp-validation-for="Equipment.Maintenance" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Equipment.Warranty" class="control-label"></label>
                 <input asp-for="Equipment.Warranty" class="form-control" />
                 <span asp-validation-for="Equipment.Warranty" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Equipment.LastUpdate" class="control-label"></label>
-                <input asp-for="Equipment.LastUpdate" class="form-control" />
-                <span asp-validation-for="Equipment.LastUpdate" class="text-danger"></span>
+                <label asp-for="Equipment.Maintenance" class="control-label"></label>
+                <input asp-for="Equipment.Maintenance" class="form-control" />
+                <span asp-validation-for="Equipment.Maintenance" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Equipment.Note" class="control-label"></label>
@@ -113,6 +108,16 @@
                         <input asp-for="Equipment.Active" /> @Html.DisplayNameFor(model => model.Equipment.Active)
                     </label>
                 </div>
+            </div>
+            <div class="form-group">
+                <label asp-for="Equipment.Registration" class="control-label"></label>
+                <input asp-for="Equipment.Registration" class="form-control" readonly />
+                <span asp-validation-for="Equipment.Registration" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Equipment.LastUpdate" class="control-label"></label>
+                <input asp-for="Equipment.LastUpdate" class="form-control" readonly/>
+                <span asp-validation-for="Equipment.LastUpdate" class="text-danger"></span>
             </div>
             <hr />
             <div class="form-group">
