--- a/Inventory/Views/Companies/Edit.cshtml
+++ b/Inventory/Views/Companies/Edit.cshtml
@@ -30,6 +30,16 @@
                     </label>
                 </div>
             </div>
+            <div class="form-group">
+                <label asp-for="Registration" class="control-label"></label>
+                <input asp-for="Registration" class="form-control" readonly />
+                <span asp-validation-for="Registration" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="LastUpdate" class="control-label"></label>
+                <input asp-for="LastUpdate" class="form-control" readonly />
+                <span asp-validation-for="LastUpdate" class="text-danger"></span>
+            </div>
             <hr />
             <div class="form-group">
                 <a asp-action="Index" class="btn btn-default">Voltar</a> |
