--- a/Inventory/Views/Equipments/Details.cshtml
+++ b/Inventory/Views/Equipments/Details.cshtml
@@ -101,22 +101,16 @@
                 @Html.DisplayFor(model => model.SerialNumber)
             </dd>
             <dt>
-                @Html.DisplayNameFor(model => model.Maintenance)
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.Maintenance)
-            </dd>
-            <dt>
                 @Html.DisplayNameFor(model => model.Warranty)
             </dt>
             <dd>
                 @Html.DisplayFor(model => model.Warranty)
             </dd>
             <dt>
-                @Html.DisplayNameFor(model => model.LastUpdate)
+                @Html.DisplayNameFor(model => model.Maintenance)
             </dt>
             <dd>
-                @Html.DisplayFor(model => model.LastUpdate)
+                @Html.DisplayFor(model => model.Maintenance)
             </dd>
             <dt>
                 @Html.DisplayNameFor(model => model.Note)
@@ -129,6 +123,18 @@
             </dt>
             <dd>
                 @Html.DisplayFor(model => model.Active)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Registration)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Registration)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.LastUpdate)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.LastUpdate)
             </dd>
         </dl>
     </div>
