--- a/Inventory/Views/Equipments/Index.cshtml
+++ b/Inventory/Views/Equipments/Index.cshtml
@@ -13,6 +13,9 @@
     <thead>
         <tr class="success">
             <th>
+                @Html.DisplayNameFor(model => model.Employee.Name)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Equity)
             </th>
             <th>
@@ -20,27 +23,6 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Hostname)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.OldHostname)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MAC)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IP)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MEM)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Processor)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.HD)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.GPU)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Manufacturer)
@@ -52,29 +34,27 @@
                 @Html.DisplayNameFor(model => model.ServiceTag)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SerialNumber)
+                @Html.DisplayNameFor(model => model.Warranty)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Maintenance)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Warranty)
+                @Html.DisplayNameFor(model => model.Active)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.LastUpdate)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Note)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Active)
-            </th>
-            <th></th>
+            <th>Remover</th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @*@Html.DisplayFor(modelItem => item.Employee.Name)*@
+                @Html.ActionLink(item.Employee.Name, "Details", "Equipments", new { id = item.EquipmentId }, null)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Equity)
             </td>
@@ -83,27 +63,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Hostname)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OldHostname)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MAC)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IP)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MEM)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Processor)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.HD)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.GPU)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Manufacturer)
@@ -115,27 +74,19 @@
                 @Html.DisplayFor(modelItem => item.ServiceTag)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.SerialNumber)
+                @Html.DisplayFor(modelItem => item.Warranty)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Maintenance)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Warranty)
+                @Html.DisplayFor(modelItem => item.Active)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.LastUpdate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Note)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Active)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.EquipmentId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.EquipmentId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.EquipmentId">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.EquipmentId"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a>
             </td>
         </tr>
 }
