--- a/Inventory/Views/Equipments/Create.cshtml
+++ b/Inventory/Views/Equipments/Create.cshtml
@@ -14,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Equipment.EmployeeId" class="control-label"></label>
-                <select asp-for="Equipment.EmployeeId" asp-items="@(new SelectList(Model.Employees,"EmployeeId","Name"))" class="form-control"></select>
+                <select asp-for="Equipment.EmployeeId" asp-items="@(new SelectList(Model.Employees,"EmployeeId","Info"))" class="form-control"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Equipment.Equity" class="control-label"></label>
