--- a/Inventory/Views/Companies/Edit.cshtml
+++ b/Inventory/Views/Companies/Edit.cshtml
@@ -1,51 +1,61 @@
 ﻿@model Inventory.Models.Company
 
 @{
-    ViewData["Title"] = "Editar Empresa";
+    ViewData["Title"] = "Alterando Empresa";
 }
 
-<h2>@ViewData["Title"]</h2>
+<ol class="breadcrumb">
+    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+    <li><a asp-area="" asp-controller="Companies" asp-action="Index">Empresas</a></li>
+    <li class="active">Alteração</li>
+</ol>
 
-<!--<h4>Company</h4>-->
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="CompanyId" />
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+<div class="panel panel-default">
+    <div class="panel-heading"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> @ViewData["Title"]</div>
+    <div class="panel-body">
+
+        <div class="row">
+            <div class="col-md-4">
+                <form asp-action="Edit">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" asp-for="CompanyId" />
+                    <div class="form-group">
+                        <label asp-for="Name" class="control-label"></label>
+                        <input asp-for="Name" class="form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="CNPJ" class="control-label"></label>
+                        <input asp-for="CNPJ" class="form-control" />
+                        <span asp-validation-for="CNPJ" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <div class="checkbox">
+                            <label>
+                                <input asp-for="Active" /> @Html.DisplayNameFor(model => model.Active)
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Registration" class="control-label"></label>
+                        <input asp-for="Registration" class="form-control" readonly />
+                        <span asp-validation-for="Registration" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="LastUpdate" class="control-label"></label>
+                        <input asp-for="LastUpdate" class="form-control" readonly />
+                        <span asp-validation-for="LastUpdate" class="text-danger"></span>
+                    </div>
+                    <hr />
+                    <div class="form-group">
+                        <a asp-action="Index" class="btn btn-info"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> Voltar</a> |
+                        <button type="submit" class="btn btn-success">
+                            <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span> Salvar
+                        </button>
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label asp-for="CNPJ" class="control-label"></label>
-                <input asp-for="CNPJ" class="form-control" />
-                <span asp-validation-for="CNPJ" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <div class="checkbox">
-                    <label>
-                        <input asp-for="Active" /> @Html.DisplayNameFor(model => model.Active)
-                    </label>
-                </div>
-            </div>
-            <div class="form-group">
-                <label asp-for="Registration" class="control-label"></label>
-                <input asp-for="Registration" class="form-control" readonly />
-                <span asp-validation-for="Registration" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LastUpdate" class="control-label"></label>
-                <input asp-for="LastUpdate" class="form-control" readonly />
-                <span asp-validation-for="LastUpdate" class="text-danger"></span>
-            </div>
-            <hr />
-            <div class="form-group">
-                <a asp-action="Index" class="btn btn-default">Voltar</a> |
-                <input type="submit" value="Salvar" class="btn btn-warning" />
-            </div>
-        </form>
+        </div>
     </div>
 </div>
 
