--- a/Inventory/Views/Companies/Index.cshtml
+++ b/Inventory/Views/Companies/Index.cshtml
@@ -4,51 +4,63 @@
     ViewData["Title"] = "Empresas";
 }
 
-<h2>@ViewData["Title"]</h2>
+<ol class="breadcrumb">
+    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+    <li class="active">Empresas</li>
+</ol>
 
-<p>
-    <a asp-action="Create" class="btn btn-default">Nova Empresa</a>
-</p>
-<table class="table table-striped table-hover">
-    <thead>
-        <tr class="success">
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CNPJ)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Active)
-            </th>            
-            <th>
-                @Html.DisplayNameFor(model => model.LastUpdate)
-            </th>
-            <th>
-                Remover
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @*@Html.DisplayFor(modelItem => item.Name)*@
-                @Html.ActionLink(item.Name, "Details", "Companies", new { id = item.CompanyId }, null)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CNPJ)                
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Active)
-            </td>            
-            <td>
-                @Html.DisplayFor(modelItem => item.LastUpdate)
-            </td>
-            <td>                
-                <a asp-action="Delete" asp-route-id="@item.CompanyId"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="panel panel-default">
+    <div class="panel-heading">@ViewData["Title"] <span class="badge">@Model.Count().ToString()</span></div>
+    <div class="panel-body">
+        <p>
+            <a asp-action="Create" class="btn btn-success"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Inserir</a>
+        </p>
+
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr class="success">
+
+                    <th>
+                        @Html.DisplayNameFor(model => model.Name)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CNPJ)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Active)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.LastUpdate)
+                    </th>
+                    <th>
+                        Remover
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @*@Html.DisplayFor(modelItem => item.Name)*@
+                            @Html.ActionLink(item.Name, "Details", "Companies", new { id = item.CompanyId }, null)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CNPJ)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Active)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.LastUpdate)
+                        </td>
+                        <td>
+                            <a asp-action="Delete" asp-route-id="@item.CompanyId"><span class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span></a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+
+    </div>
+</div>
