--- a/Inventory/Views/Equipments/Edit.cshtml
+++ b/Inventory/Views/Equipments/Edit.cshtml
@@ -15,7 +15,7 @@
             <input type="hidden" asp-for="Equipment.EquipmentId" />
             <div class="form-group">
                 <label asp-for="Equipment.EmployeeId" class="control-label"></label>
-                <select asp-for="Equipment.EmployeeId" asp-items="@(new SelectList(Model.Employees,"EmployeeId","Info"))" class="form-control"></select>
+                <select asp-for="Equipment.EmployeeId" asp-items="@(new SelectList(Model.Employees,"EmployeeId","Name"))" class="form-control"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Equipment.Equity" class="control-label"></label>
