--- a/Inventory/Views/Equipments/EquipmentsUnderWarranty.cshtml
+++ b/Inventory/Views/Equipments/EquipmentsUnderWarranty.cshtml
@@ -1,15 +1,11 @@
 ﻿@model IEnumerable<Inventory.Models.Equipment>
 
 @{
-    ViewData["Title"] = "Equipamentos";
+    ViewData["Title"] = "Equipamentos na garantia";
 }
 
 <h2>@ViewData["Title"]</h2>
 
-<p>
-    <a asp-action="Create" class="btn btn-default">Novo Equipamento</a> |
-    <a asp-action="EquipmentsUnderWarranty" class="btn btn-default">Na garantia</a>
-</p>
 <table class="table table-striped table-hover">
     <thead>
         <tr class="success">
