inclusão de css js

--- a/Inventory/Views/Companies/Delete.cshtml
+++ b/Inventory/Views/Companies/Delete.cshtml
@@ -11,10 +11,10 @@
 </ol>
 
 <div class="panel panel-default">
-    <div class="panel-heading"><span class="glyphicon glyphicon-remove-sign" aria-hidden="true"></span> @ViewData["Title"]</div>
+    <div class="panel-heading"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> @ViewData["Title"]</div>
     <div class="panel-body">
         <div class="alert alert-danger" role="alert">
-            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+            <span class="glyphicon glyphicon-remove-sign" aria-hidden="true"></span>
             Você tem certeza que deseja remover esta empresa?
         </div>
 
