--- a/Inventory/Views/Companies/Details.cshtml
+++ b/Inventory/Views/Companies/Details.cshtml
@@ -7,11 +7,11 @@
 <ol class="breadcrumb">
     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
     <li><a asp-area="" asp-controller="Companies" asp-action="Index">Empresas</a></li>
-    <li class="active">Visualização</li>
+    <li class="active">Visualizar</li>
 </ol>
 
 <div class="panel panel-default">
-    <div class="panel-heading"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> @ViewData["Title"] </div>
+    <div class="panel-heading"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> @ViewData["Title"] </div>
     <div class="panel-body">
 
         <div>
@@ -51,7 +51,7 @@
         <hr />
         <div>
             <a asp-action="Index" class="btn btn-info"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> Voltar</a> |
-            <a asp-action="Edit" asp-route-id="@Model.CompanyId" class="btn btn-warning"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Alterar</a>
+            <a asp-action="Edit" asp-route-id="@Model.CompanyId" class="btn btn-warning"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Editar</a>
         </div>
     </div>
 </div>
