--- a/Inventory/Views/Companies/Create.cshtml
+++ b/Inventory/Views/Companies/Create.cshtml
@@ -22,12 +22,12 @@
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group">
                         <label asp-for="Name" class="control-label"></label>
-                        <input asp-for="Name" class="form-control" />
+                        <input asp-for="Name" class="form-control" placeholder="Nome da Empresa"/>
                         <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="CNPJ" class="control-label"></label>
-                        <input asp-for="CNPJ" class="form-control" />
+                        <input asp-for="CNPJ" class="form-control" placeholder="00.000.000/0000-00" />
                         <span asp-validation-for="CNPJ" class="text-danger"></span>
                     </div>
                     <hr />
