--- a/Inventory/Views/Companies/Edit.cshtml
+++ b/Inventory/Views/Companies/Edit.cshtml
@@ -1,13 +1,13 @@
 ﻿@model Inventory.Models.Company
 
 @{
-    ViewData["Title"] = "Alterando Empresa";
+    ViewData["Title"] = "Editando Empresa";
 }
 
 <ol class="breadcrumb">
     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
     <li><a asp-area="" asp-controller="Companies" asp-action="Index">Empresas</a></li>
-    <li class="active">Alteração</li>
+    <li class="active">Editar</li>
 </ol>
 
 <div class="panel panel-default">
@@ -26,7 +26,7 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="CNPJ" class="control-label"></label>
-                        <input asp-for="CNPJ" class="form-control" />
+                        <input asp-for="CNPJ" class="form-control" placeholder="00.000.000/0000-00"/>
                         <span asp-validation-for="CNPJ" class="text-danger"></span>
                     </div>
                     <div class="form-group">
