--- a/Inventory/Views/Companies/Index.cshtml
+++ b/Inventory/Views/Companies/Index.cshtml
@@ -16,50 +16,37 @@
             <a asp-action="Create" class="btn btn-success"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Inserir</a>
         </p>
 
-        <table class="table table-striped table-hover">
+        <table id="tabela" class="table table-hover" style="width:100%">
             <thead>
                 <tr class="success">
-
-                    <th>
-                        @Html.DisplayNameFor(model => model.Name)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.CNPJ)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Active)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.LastUpdate)
-                    </th>
-                    <th>
-                        Remover
-                    </th>
+                    <th>@Html.DisplayNameFor(model => model.Name)</th>
+                    <th>@Html.DisplayNameFor(model => model.CNPJ)</th>
+                    <th>@Html.DisplayNameFor(model => model.Active)</th>
+                    <th>@Html.DisplayNameFor(model => model.LastUpdate)</th>
+                    <th>Remover</th>                    
                 </tr>
             </thead>
             <tbody>
                 @foreach (var item in Model)
                 {
                     <tr>
-                        <td>
-                            @*@Html.DisplayFor(modelItem => item.Name)*@
-                            @Html.ActionLink(item.Name, "Details", "Companies", new { id = item.CompanyId }, null)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.CNPJ)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Active)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.LastUpdate)
-                        </td>
-                        <td>
-                            <a asp-action="Delete" asp-route-id="@item.CompanyId"><span class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span></a>
-                        </td>
+                        <td>@Html.ActionLink(item.Name, "Details", "Companies", new { id = item.CompanyId }, null)</td>
+                        <td>@Html.DisplayFor(modelItem => item.CNPJ)</td>
+                        <td>@Html.DisplayFor(modelItem => item.Active)</td>
+                        <td>@Html.DisplayFor(modelItem => item.LastUpdate)</td>
+                        <td><a asp-action="Delete" asp-route-id="@item.CompanyId"><span class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span></a></td>                       
                     </tr>
                 }
             </tbody>
+            <tfoot>
+                <tr class="success">
+                    <th>@Html.DisplayNameFor(model => model.Name)</th>
+                    <th>@Html.DisplayNameFor(model => model.CNPJ)</th>
+                    <th>@Html.DisplayNameFor(model => model.Active)</th>
+                    <th>@Html.DisplayNameFor(model => model.LastUpdate)</th>
+                    <th>Remover</th>
+                </tr>
+            </tfoot>
         </table>
 
     </div>
